[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/CharacterSelect.gd" type="Script" id=1]
[ext_resource path="res://Sprites/characterSelect.png" type="Texture" id=2]
[ext_resource path="res://Scenes/WitchSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/arrow.png" type="Texture" id=4]
[ext_resource path="res://Fonts/DK Udon Soup.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/CharSelectArrows.gd" type="Script" id=6]
[ext_resource path="res://Sprites/ready.png" type="Texture" id=7]
[ext_resource path="res://Sounds/magicBounce.wav" type="AudioStream" id=8]
[ext_resource path="res://Scripts/BackButton.gd" type="Script" id=9]
[ext_resource path="res://Sounds/magicMusic.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/magicHappy.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )

[node name="characterSelect" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="WitchSprite1" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 460, 450 )
_sections_unfolded = [ "Transform" ]

[node name="WitchSprite2" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 1180, 450 )
rotation = -3.14159
scale = Vector2( 1, -1 )
_sections_unfolded = [ "Transform" ]
player = 1

[node name="Container" type="Container" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1500.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="UpToSelect" type="Node2D" parent="Container" index="0"]

position = Vector2( 3.21124, 75.3298 )

[node name="ArrowUp" type="TextureRect" parent="Container/UpToSelect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 762.0
margin_top = 65.0
margin_right = 832.0
margin_bottom = 166.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Select" type="Label" parent="Container/UpToSelect" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 658.0
margin_top = 43.0
margin_right = 962.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Select"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Player1Arrows" type="Node2D" parent="Container" index="1"]

script = ExtResource( 6 )
player = 0

[node name="ArrowRight" type="TextureRect" parent="Container/Player1Arrows" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 630.0
margin_top = 320.0
margin_right = 700.0
margin_bottom = 421.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="ArrowLeft" type="TextureRect" parent="Container/Player1Arrows" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 303.0
margin_top = 320.0
margin_right = 373.0
margin_bottom = 421.0
rect_scale = Vector2( -1, 1 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="ReadyPlayer" type="TextureRect" parent="Container/Player1Arrows" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 230.0
margin_top = 385.0
margin_right = 692.0
margin_bottom = 663.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0

[node name="Nav" type="AudioStreamPlayer2D" parent="Container/Player1Arrows" index="3"]

stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Player2Arrows" type="Node2D" parent="Container" index="2"]

position = Vector2( 720, 0 )
script = ExtResource( 6 )
player = 1

[node name="ArrowRight" type="TextureRect" parent="Container/Player2Arrows" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 630.0
margin_top = 320.0
margin_right = 700.0
margin_bottom = 421.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="ArrowLeft" type="TextureRect" parent="Container/Player2Arrows" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 303.0
margin_top = 320.0
margin_right = 373.0
margin_bottom = 421.0
rect_scale = Vector2( -1, 1 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="ReadyPlayer" type="TextureRect" parent="Container/Player2Arrows" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 273.0
margin_top = 385.0
margin_right = 735.0
margin_bottom = 663.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0

[node name="Nav" type="AudioStreamPlayer2D" parent="Container/Player2Arrows" index="3"]

position = Vector2( -720, 0 )
stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="BackButton" type="Button" parent="Container" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 720.0
margin_top = 594.0
margin_right = 977.0
margin_bottom = 721.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 2
script = ExtResource( 9 )
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ArrowLeft2" type="TextureRect" parent="Container/BackButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_top = 27.0
margin_right = 142.0
margin_bottom = 128.0
rect_scale = Vector2( -0.75, 0.75 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Music" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 10 )
volume_db = -10.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Ready" type="AudioStreamPlayer2D" parent="." index="6"]

stream = ExtResource( 11 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="cancel_ready" from="Container/Player1Arrows" to="." method="player_cancel"]

[connection signal="changeCharacter" from="Container/Player1Arrows" to="WitchSprite1" method="pick_character"]

[connection signal="ready" from="Container/Player1Arrows" to="." method="player_ready"]

[connection signal="cancel_ready" from="Container/Player2Arrows" to="." method="player_cancel"]

[connection signal="changeCharacter" from="Container/Player2Arrows" to="WitchSprite2" method="pick_character"]

[connection signal="ready" from="Container/Player2Arrows" to="." method="player_ready"]


